# Hive

./: AUTHORS  CMakeLists.txt  doxygen.conf
cmake/: FindGettext.cmake
src/: CMakeLists.txt  hive.cpp  hive.h  main.cpp
src/cli/: argument.cpp  argument.h  argumentparser.cpp  argumentparser.h  argumentparserstate.cpp  argumentparserstate.h  interstateargument.cpp  interstateargument.h  statechangeargument.cpp  statechangeargument.h
src/graph/: dummyexternaldependencymapper.cpp  dummyexternaldependencymapper.h  externaldependency.cpp  externaldependency.h  externaldependencymapper.cpp  externaldependencymapper.h  externaldependencymapperfactory.cpp  externaldependencymapperfactory.h  externaldependencymapperinterface.h  externaldependencypool.cpp  externaldependencypool.h  externaldependencyresolver.cpp  externaldependencyresolver.h  graph.cpp  graph.h  mapparser.cpp  mapparser.h  mapsax2handler.cpp  mapsax2handler.h  node.cpp  node.h  nodefactory.cpp  nodefactory.h  nodeparser.cpp  nodeparser.h  nodesax2handler.cpp  nodesax2handler.h  packagekitinterface.cpp  packagekitinterface.h
src/graph/exceptions/: externalmappingexception.cpp  externalmappingexception.h  graphexception.cpp  graphexception.h  invalidparserrequestexception.cpp  invalidparserrequestexception.h  parserexception.h  unknownmapexception.cpp  unknownmapexception.h
src/graph/protocolbuffers/: packagedescription.proto  packagemapcontainer.proto
src/graph/xsd/: mappings.xsd  package.xsd
src/space/: space.cpp  space.h  spacesax2handler.cpp  spacesax2handler.h
src/space/xsd/: space.xsd
src/util/exception/: hiveexception.cpp  hiveexception.h
src/util/io/: directory.cpp  directory.h  file.cpp  file.h  resourcereference.cpp  resourcereference.h
src/util/io/exception/: filesystemexception.cpp  filesystemexception.h  filesystemopenexception.cpp  filesystemopenexception.h
src/util/l10n/: l10n.h
src/util/xml/: defaultxercessax2handler.cpp  defaultxercessax2handler.h  xercesparser.cpp  xercesparser.h  xercessax2parser.cpp  xercessax2parser.h
src/util/xml/exception/: parserexception.cpp  parserexception.h
